// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overlay component with big prop matches snapshot 1`] = `
<div
  className="Overlay dark"
/>
`;

exports[`Overlay component with no props matches snapshot 1`] = `
<div
  className="Overlay"
/>
`;
